[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Options.gd" type="Script" id=1]
[ext_resource path="res://Assets/Pictures/background.png" type="Texture" id=2]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 553, 457.5 )
scale = Vector2( 7.65469, 11.6847 )
texture = ExtResource( 2 )

[node name="Options" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.0
margin_top = -92.0
margin_right = -3.0
margin_bottom = -4.0
rect_scale = Vector2( 2, 2 )
text = "Opções"
align = 1
valign = 1

[node name="Voltar" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 482.0
margin_top = -120.0
margin_right = 530.0
margin_bottom = -100.0
text = "voltar"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.414
anchor_top = 0.673
anchor_right = 0.574
anchor_bottom = 0.673
margin_left = -20.0
margin_top = -34.0
margin_right = 20.0
margin_bottom = 34.0

[node name="Dificuldade" type="Button" parent="VBoxContainer"]
margin_right = 258.0
margin_bottom = 20.0
text = "Dificuldade"

[node name="Teclas" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 258.0
margin_bottom = 44.0
text = "Esquemas de Teclas"

[node name="Audio" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 258.0
margin_bottom = 68.0
text = "Audio"

[node name="Idioma" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 258.0
margin_bottom = 92.0
text = "Idioma"

[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]
[connection signal="pressed" from="VBoxContainer/Dificuldade" to="." method="_on_Dificuldade_pressed"]
[connection signal="pressed" from="VBoxContainer/Teclas" to="." method="_on_Teclas_pressed"]
[connection signal="pressed" from="VBoxContainer/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="VBoxContainer/Idioma" to="." method="_on_Idioma_pressed"]
